syntax = "proto3";

package hosts;

import "host/host.proto";

// Hosts is a service that allows to interact with all hosts.
service Hosts {
   rpc Create(CreateHostRequest) returns (CreateHostResponse) {}
   rpc Read(ReadHostRequest) returns (ReadHostResponse) {}
   rpc List(ReadHostRequest) returns (ReadHostResponse) {}
   rpc Upsert(UpsertHostRequest) returns (UpsertHostResponse) {}
   rpc Delete(DeleteHostRequest) returns (DeleteHostResponse) {}
}

message CreateHostRequest {
    repeated host.Host Hosts = 1;
}

message CreateHostResponse {
    repeated host.Host Hosts = 1;
}

message ReadHostRequest{
    host.Host Host = 1;
}

message ReadHostResponse{
    repeated host.Host Hosts = 1;
}

message ReadHostManyRequest{
    host.Host Host = 1;
}

message ReadHostManyResponse{
    repeated host.Host Hosts = 1;
}

message UpsertHostRequest{
    repeated host.Host Hosts = 1;
}

message UpsertHostResponse{
    repeated host.Host Hosts = 1;
}

message DeleteHostRequest{
    repeated host.Host Hosts = 1;
}

message DeleteHostResponse{
    repeated host.Host Hosts = 1;
}
